Projeto Parrot Card Game versão com implementação do bônus

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <h1>
             PARROT CARD GAME
         </h1>
+        <p>Tempo: <span class="clock">0</span> segundos</p>
     </header>
     <main>
         <ul></ul>
