--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link href="style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -19,12 +21,17 @@
         <h1>
             PARROT CARD GAME
         </h1>
-        <p>Tempo: <span class="clock">0</span> segundos</p>
+        <div class="timer">
+            <ion-icon class="timer_icon" name="time-outline"></ion-icon>
+            <p>Tempo: <span class="clock">0</span> segundos</p>
+        </div>
     </header>
     <main>
         <ul></ul>
     </main>
     <script src="script.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
